--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,12 @@
---- 
+---
 abstract: Keep imports out of your namespace
-author: 
-  - Florian Ragwitz <rafl@debian.org>
-generated_by: Dist::Zilla::Plugin::MetaYaml version 1.006
+author:
+- Florian Ragwitz <rafl@debian.org>
+generated_by: Dist::Zilla::Plugin::MetaYaml version 1.007
 license: perl
 name: namespace-autoclean
-requires: 
-  B::Hooks::EndOfScope: 0.07
-  Class::MOP: 0.80
-  namespace::clean: 0.11
-version: 0.04
+requires:
+  B::Hooks::EndOfScope: '0.07'
+  Class::MOP: '0.80'
+  namespace::clean: '0.11'
+version: '0.05'
