--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,16 @@
 ---
-abstract: Keep imports out of your namespace
+abstract: 'Keep imports out of your namespace'
 author:
-- Florian Ragwitz <rafl@debian.org>
-generated_by: Dist::Zilla::Plugin::MetaYaml version 1.091260
+  - 'Florian Ragwitz <rafl@debian.org>'
+generated_by: 'Dist::Zilla::Plugin::MetaYAML version 1.091440'
 license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
 name: namespace-autoclean
 requires:
-  B::Hooks::EndOfScope: '0.07'
-  Class::MOP: '0.80'
-  namespace::clean: '0.11'
-version: '0.06'
+  B::Hooks::EndOfScope: 0.07
+  Class::MOP: 0.80
+  List::Util: 0
+  namespace::clean: 0.11
+version: 0.07
