--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = namespace-autoclean
-version = 0.06
+version = 0.07
 author  = Florian Ragwitz <rafl@debian.org>
 license = Perl_5
 copyright_holder = Florian Ragwitz
@@ -8,6 +8,7 @@ copyright_holder = Florian Ragwitz
 namespace::clean = 0.11
 B::Hooks::EndOfScope = 0.07
 Class::MOP = 0.80
+List::Util = 0
 
 [@Filter]
 bundle = @Classic
