--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = namespace-autoclean
-version = 0.09
+version = 0.10
 author  = Florian Ragwitz <rafl@debian.org>
 license = Perl_5
 copyright_holder = Florian Ragwitz
@@ -15,4 +15,4 @@ bundle = @Classic
 remove = PodVersion
 remove = BumpVersion
 
-[PodPurler]
+[PodWeaver]
