--- a/dist.ini
+++ b/dist.ini
@@ -1,8 +1,12 @@
 name    = namespace-autoclean
-version = 0.12
-author  = Florian Ragwitz <rafl@debian.org>
+version = 0.1202
+author  = Chip Salzenberg <chip@pobox.com>
 license = Perl_5
-copyright_holder = Florian Ragwitz
+copyright_holder = Florian Ragwitz, Tomas Duran, Chip Salzenberg
+
+[Prereqs]
+Package::Stash  = 0.21   ; Moose calls it out, but not Mouse
+Sub::Identify   = 0      ; not needed if Moose, oh well
 
 [@FLORA]
 dist = namespace_autoclean
