--- a/dist.ini
+++ b/dist.ini
@@ -1,13 +1,9 @@
 name    = namespace-autoclean
-version = 0.1204
-author  = Chip Salzenberg <chip@pobox.com>
+version = 0.13
+author  = Florian Ragwitz <rafl@debian.org>
 license = Perl_5
-copyright_holder = Florian Ragwitz, Tomas Duran, Chip Salzenberg
-
-[Prereqs]
-Package::Stash  = 0.21   ; Moose calls it out, but not Mouse
-Sub::Identify   = 0      ; not needed if Moose, oh well
+copyright_holder = Florian Ragwitz
 
 [@FLORA]
-dist = namespace_autoclean
+dist = namespace-autoclean
 repository_at = github
