Import of ETHER/namespace-autoclean-0.16-TRIAL from CPAN.
gitpan-cpan-distribution: namespace-autoclean
gitpan-cpan-version:      0.16-TRIAL
gitpan-cpan-path:         ETHER/namespace-autoclean-0.16-TRIAL.tar.gz
gitpan-cpan-author:       ETHER
gitpan-cpan-maturity:     developer

--- a/dist.ini
+++ b/dist.ini
@@ -12,6 +12,28 @@ Git::NextVersion.version_regexp = ^([\d._]+)(-TRIAL)?$
 Git::Tag.tag_format = %v%t
 Git::Tag.tag_message = v%v%t
 -remove = Test::UnusedVars  ; we like our $class
+AutoPrereqs.skips[0] = ^Moo
+AutoPrereqs.skips[1] = ^(Some::|My)Role$
+AutoPrereqs.skips[2] = ^Sub::Name$
+AutoPrereqs.skips[3] = ^Bar$
+
+[Prereqs / DevelopRequires]
+Class::MOP = 0
+Moose = 0.56
+MooseX::Role::WithOverloading = 0
+MooseX::MarkAsMethods = 0
+Moo = 0
+Sub::Name = 0
+Module::Runtime = 0
+Exporter = 5.57
+Sub::Exporter = 0
+Test::Fatal = 0
+parent = 0
+Role::Tiny = 1.003000
+MooseX::Role::Parameterized = 0
+
+[Prereqs / DevelopRecommends]
+Mouse = 0
 
 ; authordep Pod::Weaver = 4
 ; authordep Pod::Weaver::Section::Contributors
