--- a/META.yml
+++ b/META.yml
@@ -14,7 +14,7 @@ configure_requires:
   ExtUtils::MakeMaker: '6.30'
   Module::Build::Tiny: '0.036'
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 5.019, CPAN::Meta::Converter version 2.141170'
+generated_by: 'Dist::Zilla version 5.019, CPAN::Meta::Converter version 2.141520'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -27,7 +27,7 @@ no_index:
 provides:
   namespace::autoclean:
     file: lib/namespace/autoclean.pm
-    version: '0.16'
+    version: '0.17'
 requires:
   B::Hooks::EndOfScope: '0.12'
   List::Util: '0'
@@ -40,7 +40,7 @@ resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=namespace-autoclean
   homepage: https://github.com/moose/namespace-autoclean
   repository: https://github.com/moose/namespace-autoclean.git
-version: '0.16'
+version: '0.17'
 x_Dist_Zilla:
   perl:
     version: '5.020000'
@@ -149,7 +149,7 @@ x_Dist_Zilla:
             - ':ExecFiles'
             - '@Author::ETHER/Examples'
       name: '@Author::ETHER/Test::Compile'
-      version: '2.040'
+      version: '2.042'
     -
       class: Dist::Zilla::Plugin::Test::NoTabs
       config:
@@ -205,7 +205,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MojibakeTests
       name: '@Author::ETHER/MojibakeTests'
-      version: '0.5'
+      version: '0.6'
     -
       class: Dist::Zilla::Plugin::Test::ReportPrereqs
       name: '@Author::ETHER/Test::ReportPrereqs'
@@ -382,30 +382,30 @@ x_Dist_Zilla:
       name: '@Author::ETHER/pluginbundle_version'
       version: '5.019'
     -
+      class: Dist::Zilla::Plugin::MakeMaker::Fallback
+      config:
+        Dist::Zilla::Role::TestRunner:
+          default_jobs: 9
+      name: '@Author::ETHER/MakeMaker::Fallback'
+      version: '0.010'
+    -
+      class: Dist::Zilla::Plugin::ModuleBuildTiny::Fallback
+      config:
+        Dist::Zilla::Role::TestRunner:
+          default_jobs: 9
+      name: '@Author::ETHER/ModuleBuildTiny::Fallback'
+      version: '0.005'
+    -
+      class: Dist::Zilla::Plugin::InstallGuide
+      name: '@Author::ETHER/InstallGuide'
+      version: '1.200003'
+    -
       class: Dist::Zilla::Plugin::RunExtraTests
       config:
         Dist::Zilla::Role::TestRunner:
           default_jobs: 9
       name: '@Author::ETHER/RunExtraTests'
       version: '0.021'
-    -
-      class: Dist::Zilla::Plugin::MakeMaker::Fallback
-      config:
-        Dist::Zilla::Role::TestRunner:
-          default_jobs: 9
-      name: '@Author::ETHER/MakeMaker::Fallback'
-      version: '0.009'
-    -
-      class: Dist::Zilla::Plugin::ModuleBuildTiny
-      config:
-        Dist::Zilla::Role::TestRunner:
-          default_jobs: 9
-      name: '@Author::ETHER/ModuleBuildTiny'
-      version: '0.006'
-    -
-      class: Dist::Zilla::Plugin::InstallGuide
-      name: '@Author::ETHER/InstallGuide'
-      version: '1.200003'
     -
       class: Dist::Zilla::Plugin::CheckSelfDependency
       config:
@@ -512,7 +512,7 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Git::Tag:
           branch: ~
           signed: 0
-          tag: 0.16-TRIAL
+          tag: '0.17'
           tag_format: '%v%t'
           tag_message: v%v%t
           time_zone: local
@@ -610,7 +610,7 @@ x_Dist_Zilla:
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
-      is_trial: '1'
+      is_trial: '0'
     version: '5.019'
 x_authority: cpan:FLORA
 x_contributors:
