--- a/dist.ini
+++ b/dist.ini
@@ -5,18 +5,18 @@ copyright_holder = Florian Ragwitz
 copyright_year = 2009
 
 [@Author::ETHER]
-:version = 0.028
+:version = 0.068
 server = github
 Authority.authority = cpan:FLORA
 Git::NextVersion.version_regexp = ^([\d._]+)(-TRIAL)?$
 Git::Tag.tag_format = %v%t
 Git::Tag.tag_message = v%v%t
--remove = Test::UnusedVars  ; we like our $class
 AutoPrereqs.skips[0] = ^Moo
 AutoPrereqs.skips[1] = ^(Some::|My)Role$
 AutoPrereqs.skips[2] = ^Sub::Name$
 AutoPrereqs.skips[3] = ^Bar$
 AutoPrereqs.skips[4] = ^Mouse
+AutoPrereqs.skips[5] = ^OldMoose$
 
 [Prereqs / DevelopRequires]
 Class::MOP = 0
@@ -37,4 +37,4 @@ MooseX::Role::Parameterized = 0
 ; authordep Pod::Weaver = 4
 ; authordep Pod::Weaver::Section::Contributors
 
-[ContributorsFromGit]
+[Test::CleanNamespaces]
